# athena-nodejs-client

./: .gitignore  .gitmodules  .npmignore  .pre-commit-config.yaml  .prettierrc  README.md  eslint.config.mjs  hierarchy.html  index.html  modules.html  package-lock.json  package.json  pyproject.toml  tsconfig.json  tsconfig.release.json  typedoc.json
.github/: dependabot.yml
.github/workflows/: docs.yml  functional-tests.yml  (+3 more)
__tests__/: vitest.config.ts  vitest.functional.config.ts
assets/: hierarchy.js  navigation.js  search.js
classes/: ClassifierSdk.html  ClassifierServiceClient.html
docs/: Makefile  api_reference.rst  athena-grpc-client.rst  athena-types.rst  authenticationManager.rst  conf.py  grpc-client.rst  hashing.rst  index.rst
enums/: ErrorCode.html  HashType.html  ImageFormat.html  RequestEncoding.html
functions/: computeHashesFromStream.html
interfaces/: Classification.html  ClassificationError.html  ClassificationInput.html  ClassificationOutput.html  ClassifierHelperOptions.html  ClassifyImageOptions.html  ClassifyRequest.html  ClassifyResponse.html  Deployment.html  IClassifierServiceClient.html  ImageHash.html  ListDeploymentsResponse.html
samples/: .env.example  README.md
src/: authenticationManager.ts  hashing.ts  index.ts  main.ts
types/: ClassifierEvents.html
variables/: Classification.html  ClassificationError.html  ClassificationInput.html  ClassificationOutput.html  ClassifierService.html  ClassifyRequest.html  ClassifyResponse.html  Deployment.html  ImageHash.html  ListDeploymentsResponse.html  defaultGrpcAddress.html
(+30 files in other folders)
